tests/syntactic/printsize_directive/printsize_directive.err
Error: Redefinition of input directives for relation B in file printsize_directive.dl at line 14
.printsize B
-----------^-
Previous definition in file printsize_directive.dl at line 13
.printsize B
-----------^-
1 errors generated, evaluation aborted
