tests/syntactic/printsize_directive/printsize_directive.dl
// Souffle - A Datalog Compiler
// Copyright (c) 2017, The Souffle Developers. All rights reserved
// Licensed under the Universal Permissive License v 1.0 as shown at:
// - https://opensource.org/licenses/UPL
// - <souffle root>/licenses/SOUFFLE-UPL.txt

.decl A(x:number)
A(1).
A(2).

.decl B(x:number)
B(x) :- A(x).
.printsize B
.printsize B
